--- a/Zaikaa/food/static/css/signup.css
+++ b/Zaikaa/food/static/css/signup.css
@@ -96,3 +96,8 @@ body {
     from { opacity: 0; transform: translateY(-20px); }
     to { opacity: 1; transform: translateY(0); }
 }
+
+.options a:hover {
+    color: green;
+    text-decoration: underline;
+}
